--- a/WebUI/Views/Roles/Index.cshtml
+++ b/WebUI/Views/Roles/Index.cshtml
@@ -5,18 +5,19 @@
 }
 
 <h2>Роли</h2>
+<h4>@Html.ActionLink("Создать роль", "Create")</h4>
 <table class="table">
     <tr>
-        <th>Название</th>
-        <th>Описание</th>
+        <th>@Html.DisplayNameFor(model=>model.Name)</th>
+        <th>@Html.DisplayNameFor(model => model.Description)</th>
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.Name</td>
-            <td>@item.Description</td>
+            <td>@Html.DisplayFor(model=>item.Name)</td>
+            <td>@Html.DisplayFor(model => item.Description)</td>
             <td>
                 @Html.ActionLink("Редактировать", "Edit", new {id = item.Id}) |
                 @Html.ActionLink("Удалить", "Delete", new {id = item.Id}) |
@@ -26,4 +27,3 @@
         </tr>
     }
 </table>
-@Html.ActionLink("Создать", "Create")
