--- a/WebUI/Views/Account/Index.cshtml
+++ b/WebUI/Views/Account/Index.cshtml
@@ -7,20 +7,20 @@
 <h2>Пользователи</h2>
 <table class="table">
     <tr>
-        <th>Имя</th>
-        <th>Группа</th>
-        <th>Электронный адрес</th>
+        <th>@Html.DisplayNameFor(model=>model.Name)</th>
+        <th>@Html.DisplayNameFor(model => model.Group)</th>
+        <th>@Html.DisplayNameFor(model => model.Email)</th>
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.Name</td>
-            <td>@item.Group</td>
-            <td>@item.Email</td>
+            <td>@Html.DisplayFor(model=>item.Name)</td>
+            <td>@Html.DisplayFor(model => item.Group)</td>
+            <td>@Html.DisplayFor(model => item.Email)</td>
             <td>
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Удалить", "Delete", new { id = item.Id })
             </td>
         </tr>
     }
