--- a/WebUI/Views/Classroom/Create.cshtml
+++ b/WebUI/Views/Classroom/Create.cshtml
@@ -1,17 +1,16 @@
 ﻿@model WebUI.Models.Classroom
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Создать класс";
 }
 
-<h2>Create</h2>
+<h2>Создать новый класс</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Classroom</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -21,19 +20,22 @@
                 @Html.ValidationMessageFor(model => model.Name, "", new {@class = "text-danger"})
 
             </div>
+            @if (ViewContext.HttpContext.User.IsInRole("Admin"))
+            {
+                @Html.LabelFor(model => model.Teacher.Email, htmlAttributes: new {@class = "control-label col-md-2"})
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Teacher.Email, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Teacher.Email, "", new {@class = "text-danger"})
 
-            @Html.LabelFor(model => model.Teacher.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Teacher.Email, new { htmlAttributes = new { @class = "form-control"  } })
-                @Html.ValidationMessageFor(model => model.Teacher.Email, "", new { @class = "text-danger" })
+                </div>
+            }
 
-            </div>
 
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
