--- a/WebUI/Views/Classroom/Index.cshtml
+++ b/WebUI/Views/Classroom/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<WebUI.Models.Classroom>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Классы";
 }
 
-<h2>Index</h2>
+<h2>Список классов</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Создать новый класс", "Create",new {returnUrl=Request.Url})
 </p>
 <table class="table">
     <tr>
@@ -35,9 +35,8 @@
             @Html.DisplayFor(modelItem => item.Teacher.Email)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Войти в класс", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Удалить", "Delete", new { id=item.Id,returnUrl = Request.Url })
         </td>
     </tr>
 }
