--- a/WebUI/Views/Roles/AddUserInRole.cshtml
+++ b/WebUI/Views/Roles/AddUserInRole.cshtml
@@ -1,17 +1,16 @@
 ﻿@model WebUI.Models.AddUserInRoleModel
 
 @{
-    ViewBag.Title = "AddUserInRole";
+    ViewBag.Title = "Добавить в роль пользователя";
 }
 
-<h2>AddUserInRole</h2>
+<h2>Добавить в роль "@Model.Role" пользователя</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AddUserInRoleModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -25,12 +24,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Добавить" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
